--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^3.1.17
   firebase_auth: ^3.3.19
   firebase_storage: ^10.2.17
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
