--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^3.3.19
   firebase_storage: ^10.2.17
   image_picker: ^0.8.5+3
+  provider: ^6.0.3
 
 dev_dependencies:
   flutter_test:
